--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "netlify deploy --prod"
   },
   "keywords": [],
   "author": "",
@@ -21,11 +22,14 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "moment": "^2.29.4",
+    "netlify-cli": "^16.5.1",
+    "netlify-lambda": "^2.0.16",
     "nodemon": "^3.0.1",
     "pg": "^8.11.2",
     "pg-hstore": "^2.3.4",
     "routes": "^2.1.0",
     "sequelize": "^6.33.0",
-    "sequelize-cli": "^6.6.1"
+    "sequelize-cli": "^6.6.1",
+    "serverless-http": "^3.2.0"
   }
 }
