--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "notes back-end",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "api.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "build": "netlify deploy --prod"
+    "start": "./node_modules/.bin/netlify-lambda serve src",
+    "build": "./node_modules/.bin/netlify-lambda serve src"
   },
   "keywords": [],
   "author": "",
