--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prettier": "^3.0.0"
   },
   "dependencies": {
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.19.3/xlsx-0.19.3.tgz",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
